fixed element spacing

--- a/templatelibrary/template1style.css
+++ b/templatelibrary/template1style.css
@@ -3,6 +3,10 @@ html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body { 
+    margin: 0px;
+}
+
 header {
     background-color: #002248;
     color: white;
