--- a/templatelibrary/template2style.css
+++ b/templatelibrary/template2style.css
@@ -12,12 +12,18 @@ header {
     padding-left: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
+    width: 100%;
+}
+
+body {
+    margin: 0px;
 }
 
 #logo {
     width: 60px;
     height: 60px;
     border-radius: 15px;
+    margin-left: 30px;
 }
 
 header h1 {
@@ -26,6 +32,7 @@ header h1 {
 
 nav {
     background-color: #D1A8E1;
+    width: 100%;
     padding-top: 3px;
     padding-bottom: 3px;
     position: sticky;
@@ -36,7 +43,14 @@ nav ul {
     color: white;
     font-size: 16px;
     list-style: none;
-    width: 100%;
     display: flex;
     justify-content: space-evenly;
+}
+
+#content1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 700px;
+    width: 100%;
 }
